test/runnable/link12037.d
// EXTRA_SOURCES: imports/a12037.d
import imports.aXXXXX;

alias CustomFloat!(10, 5) Float16;

void main()
{
    Float16 f = 0;
}
